sql/item_sum.cc
@@ -267,6 +267,7 @@ bool Item_sum::register_sum_func(THD *thd, Item **ref)
          sl= sl->master_unit()->outer_select() )
       sl->master_unit()->item->with_sum_func= 1;
   }
+  thd->lex->current_select->mark_as_dependent(aggr_sl);
   return FALSE;
 }
 
